ingress.yaml
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: salstocks
  annotations:
    kubernetes.io/ingress.global-static-ip-name: grading
  labels:
    app: salstocks
spec:
  backend:
    serviceName: java-guestbook-frontend
    servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: java-guestbook-frontend
  labels:
    app: salstocks
spec:
  type: NodePort
  selector:
    app: salstocks
    tier: web
  ports:
  - port: 8080
    targetPort: 8080
